--- a/templates/pages/download.mustache
+++ b/templates/pages/download.mustache
@@ -1,4 +1,4 @@
-<main id="download" class="site-content content">
+<main id="download" class="site-content content download">
 	<section>
 		<h2>Window & macOS</h2>
 		<p>Installer and standalone application can be downloaded from the <a href="https://github.com/CorsixTH/CorsixTH/releases/latest">latest release page</a>.</p>
