--- a/templates/pages/media.mustache
+++ b/templates/pages/media.mustache
@@ -1,4 +1,4 @@
-<main id="media" class="site-content content">
+<main id="media" class="site-content content media">
 	<section>
 		<h2>Screenshots</h2>
 		<figure class="screenshot">
