--- a/templates/pages/index.mustache
+++ b/templates/pages/index.mustache
@@ -1,4 +1,4 @@
-<main id="index" class="site-content">
+<main id="index" class="site-content index">
 	<section class="poster">
 		<div class="video">
 			<video width="1024" height="768" autoplay loop controls muted>
@@ -12,18 +12,28 @@
 			<p class="notes">To play CorsixTH, you will need either the <a href="http://th.corsix.org/Demo.zip">demo</a>, or the full game of Theme Hospital, available for example at <a href="https://www.gog.com/game/theme_hospital">GOG.com</a>.</p>
 		</div>
 	</section>
-	<section class="news content">
-		<h2>Latest news</h2>
+	<section class="news content releases">
+		<h2>Latest releases</h2>
+		<ul>
 		{{#releases}}
-		<article class="release">
-			<header>
-				<p class="date">{{date}}</p>
-				<h3 class="title"><a href="{{{url}}}">{{title}}</a></h3>
-			</header>
-			<section class="release-notes">
-				{{{content}}}
-			</section>
-		</article>
+			<li>
+				<span class="date">{{#formatDate}}{{date}}{{/formatDate}}</span>
+				<span class="title"><a href="{{{url}}}">{{title}}</a></span>
+			</li>
 		{{/releases}}
+		</ul>
+		<a href="https://github.com/CorsixTH/CorsixTH/releases" class="action">All release notes</a>
+	</section>
+	<section class="news content blogposts">
+		<h2>Development blog</h2>
+		<ul>
+		{{#posts}}
+			<li>
+				<span class="date">{{#formatDate}}{{date}}{{/formatDate}}</span>
+				<span class="title"><a href="{{{url}}}">{{title}}</a></span>
+			</li>
+		{{/posts}}
+		</ul>
+		<a href="https://corsixth.lewri.me/" class="action">All articles</a>
 	</section>
 </main>
