--- a/assets/style.css
+++ b/assets/style.css
@@ -698,6 +698,12 @@ a.action:active
 	background: #eb7978;
 }
 
+.content a.action:active
+{
+	margin: 0;
+	padding: 0.5em 1em;
+}
+
 
 @media (max-width: 64em)
 {
